# shell360

./: .gitattributes  .gitignore  .taurignore  Cargo.toml  README-zh_cn.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.json
.github/: copilot-instructions.md  release.yml
.github/workflows/: main.yml  release.yaml
desktop/: index.html  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/src/: App.tsx  index.tsx  vite-env.d.ts
docs/: CONTRIBUTE.md  CONTRIBUTING-zh_cn.md  CONTRIBUTING.md  Privacy-Policy-zh_CN.md  Privacy-Policy.md
mobile/: index.html  package.json  rsbuild.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
mobile/src/: App.tsx  env.d.ts  index.tsx  vite-env.d.ts
scripts/: android.ps1  android.sh  install_linux_deps.sh  ios.sh  linux.sh  macos.sh  update.js  updateDependencies.js  windows.ps1
shared/: esbuild.js  package.json  rslib.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.webview.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  error.rs  lib.rs  main.rs
tauri-plugin-data/: .gitignore  Cargo.toml  README.md  build.rs  package.json  rollup.config.js  tsconfig.json
tauri-plugin-data/guest-js/: crypto.ts  host.ts  key.ts  portForwarding.ts
tauri-plugin-data/permissions/: default.toml
tauri-plugin-data/permissions/autogenerated/: reference.md
tauri-plugin-data/permissions/autogenerated/commands/: add_host.toml  add_key.toml  add_port_forwarding.toml  change_crypto_enable.toml  change_crypto_password.toml  change_password.toml  check_crypto_status.toml  check_is_authed.toml  check_is_enable_crypto.toml  check_is_init_crypto.toml  delete_host.toml  delete_key.toml  delete_port_forwarding.toml  get_hosts.toml  get_keys.toml  get_port_forwardings.toml  init_crypto.toml  init_crypto_biometric.toml  init_crypto_key.toml  init_crypto_password.toml  load_crypto.toml  load_crypto_by_biometric.toml  load_crypto_by_password.toml  reset_crypto.toml  rotate_crypto_key.toml  rotate_key.toml  update_host.toml  update_key.toml  update_port_forwarding.toml
tauri-plugin-data/permissions/schemas/: schema.json
tauri-plugin-data/src/: crypto_manager.rs  data_manager.rs  error.rs  lib.rs  utils.rs
tauri-plugin-data/src/commands/: crypto.rs  host.rs  key.rs  mod.rs  port_forwarding.rs
tauri-plugin-data/src/entities/: hosts.rs  keys.rs  mod.rs  port_forwardings.rs
tauri-plugin-data/src/migration/: m20250601_000001_create_table.rs  m20251021_000001_alter_table.rs  m20251024_000001_alter_table.rs  m20251027_000001_alter_table.rs  mod.rs
tauri-plugin-data/ts/: crypto.ts  host.ts  index.ts
tauri-plugin-mobile/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js  rslib.config.ts  tsconfig.json
tauri-plugin-mobile/android/: build.gradle.kts
tauri-plugin-mobile/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-mobile/android/src/main/java/: MobilePlugin.kt
tauri-plugin-mobile/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-mobile/guest-js/: index.ts
tauri-plugin-mobile/guest-js/iap/: iapCustomerInfo.ts  iapOffering.ts
tauri-plugin-mobile/ios/: Package.swift  README.md
tauri-plugin-mobile/ios/Sources/: MobilePlugin.swift  exportFile.swift
tauri-plugin-mobile/ios/Sources/iap/: IapCustomerInfo.swift  IapOffering.swift  IapPaywall.swift
tauri-plugin-mobile/ios/Tests/PluginTests/: PluginTests.swift
tauri-plugin-mobile/permissions/: default.toml
tauri-plugin-mobile/permissions/autogenerated/: reference.md
tauri-plugin-mobile/permissions/autogenerated/commands/: export_text_file.toml  iap_get_customer_info.toml  iap_get_offerings.toml  iap_purchase_package.toml  iap_restore.toml  iap_show_paywall.toml  import_text_file.toml
tauri-plugin-mobile/permissions/schemas/: schema.json
tauri-plugin-mobile/src/: api.rs  error.rs  lib.rs
tauri-plugin-mobile/src/iap/: iap_customer_info.rs  iap_offering.rs  mod.rs
tauri-plugin-mobile/ts/: index.ts
tauri-plugin-mobile/ts/iap/: iapCustomerInfo.ts  iapOffering.ts
tauri-plugin-ssh/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
tauri-plugin-ssh/guest-js/: index.ts  session.ts  sftp.ts  shell.ts  ssh.ts  types.ts
tauri-plugin-ssh/permissions/: default.toml
tauri-plugin-ssh/permissions/autogenerated/: reference.md
tauri-plugin-ssh/permissions/autogenerated/commands/: authenticate.toml  connect.toml  disconnect.toml  port_forwarding_close_dynamic.toml  port_forwarding_close_local.toml  port_forwarding_close_remote.toml  port_forwarding_dynamic_close.toml  port_forwarding_dynamic_open.toml  port_forwarding_local_close.toml  port_forwarding_local_open.toml  port_forwarding_open_dynamic.toml  port_forwarding_open_local.toml  port_forwarding_open_remote.toml  port_forwarding_remote_close.toml  port_forwarding_remote_open.toml  resize.toml  send.toml  session_authenticate.toml  session_connect.toml  session_disconnect.toml  sftp.toml  sftp_authenticate.toml  sftp_canonicalize.toml  sftp_channel.toml  sftp_close.toml  sftp_connect.toml  sftp_create_dir.toml  sftp_create_file.toml  sftp_disconnect.toml  sftp_download_file.toml  sftp_exists.toml  sftp_open.toml  sftp_read_dir.toml  sftp_remove_dir.toml  sftp_remove_file.toml  sftp_rename.toml  sftp_upload_file.toml  shell.toml  shell_close.toml  shell_open.toml  (+17 more)
tauri-plugin-ssh/permissions/schemas/: schema.json
tauri-plugin-ssh/src/: error.rs  lib.rs  ssh_client.rs  ssh_manager.rs  utils.rs
tauri-plugin-ssh/src/commands/: mod.rs  port_forwarding.rs  session.rs  sftp.rs  shell.rs
tauri-plugin-ssh/src/sftp/: commands.rs  mod.rs  sftp_client.rs  sftp_manager.rs
tauri-plugin-ssh/src/ssh/: commands.rs  mod.rs  socks.rs  ssh_client.rs  ssh_manager.rs
tauri-plugin-ssh/ts/: index.ts  portForwarding.ts  session.ts  sftp.ts  shell.ts
(+189 files in other folders)
