[workspace]
members = [
  "src-tauri",
  "tauri-plugin-mobile",
  "tauri-plugin-ssh",
  "tauri-plugin-data",
]
resolver = "2"

[workspace.dependencies]
tauri = "2.9.1"
tauri-build = "2.5.1"
tauri-plugin = "2.5.1"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-machine-uid = "0.1.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = { version = "2.4.2", git = "https://github.com/nashaofu/plugins-workspace.git", branch = "v2" }
tauri-plugin-fs = { version = "2.4.4", git = "https://github.com/nashaofu/plugins-workspace.git", branch = "v2" }
