[package]
name = "tauri-plugin-data"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2024"
exclude = ["/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-data"

[dependencies]
tauri = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sea-orm = { version = "1.1.15", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
sea-orm-migration = { version = "1.1.15", features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
] }
tokio = { version = "1.47.1", features = ["fs"] }
strum = { version = "0.27.2", features = ["derive"] }
serde_with = "3.14.0"
defendor = "0.0.6"
zeroize = "1.8.1"
futures = "0.3.31"
tauri-plugin-store = { version = "2.4.0", git = "https://github.com/nashaofu/plugins-workspace.git", branch = "v2" }
secrecy = "0.10.3"
base64ct = { version = "1.6.0", features = ["std"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
