[package]
name = "tauri-plugin-mobile"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2024"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-mobile"

[dependencies]
tauri = { workspace = true, features = [] }
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
