[package]
name = "tauri-plugin-ssh"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2024"
exclude = ["/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-ssh"

[dependencies]
tauri = { workspace = true, features = [] }
serde.workspace = true
thiserror.workspace = true
russh = "0.52.0"
uuid = { version = "1.18.1", features = ["serde"] }
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
serde_json.workspace = true
strum = { version = "0.27.2", features = ["derive"] }
russh-sftp = "2.1.1"
rusocks = "0.0.7"
percent-encoding = "2.3.2"
tauri-plugin-fs = { version = "2.4.2", git = "https://github.com/nashaofu/plugins-workspace.git", branch = "v2" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
